2004-03-11 Niklas Knutsson  <nq@altern.org>

	* Advanced completion in expression
	* Popup menu for resultview

2004-03-10 Niklas Knutsson  <nq@altern.org>
	
	* Lower default precision
	* Make history button a regular button
	* Reworked GUI -- menubar, expander, history window...
	* Release 0.4.2a
	* Set correct name on separator again
	* Fix some compiler warnings
	* Fix compilation without Giac

2004-03-08 Niklas Knutsson  <nq@altern.org>

	* Release 0.4.2
	* Proofread manual
	* Allow currencies to be put in front of quantity
	* Cent, yen, pound and dollar signs
	* Remove debug output related to Giac 
	* Fix some troubles printing complex numbers

2004-03-07 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation
	* First manual draft finished
	* Remove compiler warnings

2004-03-06 Niklas Knutsson  <nq@altern.org>
	
	* Gnuplot does not like quotation signs
	* Do not abort when locale not supported by C library

2004-03-05  Niklas Knutsson  <nq@altern.org>

	* Fix unit conversion of ex. ch^2 to acre
	* Some menu fixes
	* More user documentation

2004-03-04  Niklas Knutsson  <nq@altern.org>

	* Move calculate multiple roots option to result menu
	* Move unit display options to a unit display submenu
	* Begin writing the manual
	* Add help menu item if libgnome is available	
	* Add build structure for gnome style user documentation

2004-03-03  Niklas Knutsson  <nq@altern.org>

	* Fix exponential display in non-fractional mode with negative exponents
	* Fix big mistake in log (if negative exact result, returned zero)
	* Use "tab" for tab ("\t") a separator in load

2004-03-01  Niklas Knutsson  <nq@altern.org>

	* Load CSV file as matrix function (load)
	* File argument
	* Replace localized decimal point with dot in plot data
	* Save history (20 rows)
	* Expression entry history
	* "Save Result" -> "Store Result"

2004-02-28  Niklas Knutsson  <nq@altern.org>

	* Calculate command line expression

2004-02-26  Niklas Knutsson  <nq@altern.org>

	* Release 0.4.1